feat: added xss protection header to defaults custom headers

--- a/.env.example
+++ b/.env.example
@@ -79,7 +79,7 @@ MIDDLEWARES_APP_SERVER_NAME=LRW # Header response
 MIDDLEWARES_APP_ALLOW_EMPTY_ORIGIN=true # false - Mandatory request "Origin" header. Browsers direct HTTP GET is denied
 
 # https://docs.spring.io/spring-security/site/docs/5.0.x/reference/html/headers.html
-MIDDLEWARES_APP_CUSTOM_HEADERS=["Cache-Control: no-cache, no-store, max-age=0, must-revalidate", "X-Content-Type-Options: nosniff", "X-Frame-Options: DENY", "Referrer-Policy: no-referrer"]
+MIDDLEWARES_APP_CUSTOM_HEADERS=["Cache-Control: no-cache, no-store, max-age=0, must-revalidate", "X-Content-Type-Options: nosniff", "X-Frame-Options: DENY", "Referrer-Policy: no-referrer", "X-XSS-Protection: 1; mode=block"]
 
 EMAIL_SENDER_TYPE=console # Types: console, ses
 
